--- a/css/main.scss
+++ b/css/main.scss
@@ -99,6 +99,32 @@ body{
 
 .loaded{
     visibility: collapse;
+    position: relative;
+}
+
+.back-top{
+    border-radius: 50px;
+    height: 35px;
+    width: 35px;
+    padding: 10px;
+    background: $text-accent;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 555;
+    transition: 170ms ease-in;
+    cursor: pointer;
+    visibility: hidden;
+    opacity: 0;
+    
+    img{
+        width: 100%;
+    }
+}
+
+.top-show{
+    visibility: visible;
+    opacity: 1;
 }
 
 .hero-section{
@@ -1315,6 +1341,7 @@ body{
             transform: translateX(-50%);
             font: 400 14px/1.7 $font-1;
             color: white;
+            text-align: center;
         }
     }
 
@@ -1327,6 +1354,15 @@ body{
     }
     100%{
         width: 80%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .more-about-me-section{
+
+        .black-card{
+            width: 90%;
+        }
     }
 }
 
@@ -1433,6 +1469,40 @@ body{
     .recent-work-section{
         .work-collection-container{
             width: 80%;
+        }
+    }
+
+    .more-about-me-section{
+        width: 100%;
+        padding: 170px 0 0;
+
+        .black-card{
+            display: block;
+            // align-items: center;
+            // justify-content: center;
+
+            .title{
+                text-align: center;
+                padding: 0;
+                width: 100%;
+                margin: auto auto 30px;
+            }
+            
+            .text-container{
+                width: 100%;
+                padding: 0;
+                margin: auto auto 50px;
+                
+                .text{
+                    text-align: center;
+                }
+            }
+            
+            .button-container{
+                width: unset;
+                margin: auto;
+                text-align: center;
+            }
         }
     }
 }
